--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-size: 16pt;
 body
 {
 background-color: rgb(141, 141, 221);
-background-image: url("bacgroungimage.jfif");
+background-image: url("backgrounimage.jfif");
 letter-spacing: 1px;    
 
 }    
@@ -37,4 +37,5 @@ font-size: 30pt
 body{
 max-width. 800px;
 margin_auto
+
 }
