Fix CSS syntax errors and update background image

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-size: 16pt;
 body
 {
 background-color: rgb(141, 141, 221);
-background-image: url("backgrounimage.jfif");
+background-image: url("obrazek1.webp");
 letter-spacing: 1px;    
 
 }    
@@ -39,3 +39,4 @@ max-width. 800px;
 margin_auto
 
 }
+
