Fix CSS syntax errors and improve formatting

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-size: 16pt;
 body
 {
 background-color: rgb(141, 141, 221);
-background-image: url("obrazek1.webp");
+background-image: url("6016334");
 letter-spacing: 1px;    
 
 }    
@@ -39,5 +39,6 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
