Refactor CSS styles and correct syntax issues
Fixed syntax errors and updated background image.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-size: 16pt;
 body
 {
 background-color: rgb(141, 141, 221);
-background-image: url("6016334");
+background-image: url("736.jpg");
 letter-spacing: 1px;    
 
 }    
@@ -39,6 +39,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
