--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body
 {
 background-color: rgb(141, 141, 221);
 background-image: url("736.jpg");
+background-size: cover;
 letter-spacing: 1px;    
 }    
 
@@ -30,6 +31,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
