--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body
 background-color: rgb(141, 141, 221);
 background-image: url("736.jpg");
 background-size: cover;
-background-position: center
+background-position: center;
 letter-spacing: 1px;    
 }    
 
@@ -33,6 +33,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
