--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ p{
 color:rgb(10, 69, 28);
 
 font-size: 16pt;
+    style="text align: center ;"
 
 }
 
@@ -33,6 +34,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
