--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ p{
 color:rgb(10, 69, 28);
 
 font-size: 16pt;
-    style="text align: center ;"
+text align: center;
 
 }
 
@@ -34,6 +34,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
