Refactor CSS styles for body and paragraph elements
Fixed formatting issues and added text alignment for paragraphs.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 p{
 
 color:rgb(10, 69, 28);
-
 font-size: 16pt;
+text-align: justify;
 
 
 }
@@ -27,7 +27,7 @@ img{
 h1{
     font-weight: 200;
     font-size: 30pt
-    text-align: center;
+    
 }
 
 body{
@@ -35,6 +35,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
