--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ p{
 color:rgb(10, 69, 28);
 font-size: 16pt;
 text-align: justify;
+margin-right: 10%;
+margin-left: 10%;
 
 
 }
@@ -35,6 +37,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
