--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ img{
     border:5px;  
     color:black;
     border-style:solid;
+    text-align: center;
 } 
 
 h1{
@@ -45,6 +46,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
