--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ img{
     border:5px;  
     color:black;
     border-style:solid;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 } 
 
 h1{
@@ -46,6 +47,7 @@ max-width. 800px;
 margin_auto
 
 }
+
 
 
 
